db 연동 table 표 만들기

--- a/views/hello.ejs
+++ b/views/hello.ejs
@@ -6,6 +6,8 @@
     <title>Stop</title>
 </head>
 <body>
-    <h2>Wow</h2>
+    <h2>받아온 데이터는</b2><br>
+        <%=data%>>
+    <h3>입니다</h3>
 </body>
 </html>
